--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
